Bug 330059 - Text Inside a Elements Does Not Render. r=jwatt,sr=tor